[package]
name = "conrt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
nix = { version = "0.31", features = ["sched", "mount", "fs", "ioctl", "term", "user", "feature", "signal"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
